fix overflow

--- a/src/style.css
+++ b/src/style.css
@@ -18,6 +18,8 @@ main h1 {
 .recent-scores {
   width: 45%;
   padding: 0;
+  overflow: scroll;
+  overflow-x: hidden;
 }
 
 .recent-scores .heading {
@@ -36,7 +38,7 @@ main h1 {
 .recent-scores .score-board {
   display: flex;
   width: 100%;
-  height: 400px;
+  height: auto;
   border: 2px solid black;
 }
 
